--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
-        <meta charset="UTF-8"/>
+        <meta charset="UTF-8" />
         <title> Run Buddy</title>
-        <link rel="stylesheet" href="assets/css/style.css"/>
+        <link rel="stylesheet" href="./assets/css/style.css"/>
     </head>
+
     <body>
+        <!-- navigation -->
         <header>
             <h1>
-                <a href="/">RUN BUDDY</a>
+                <a href="/">
+                    RUN BUDDY
+                </a>
             </h1>
             <nav>
                 <!-- Unordered list element-->
@@ -32,23 +37,22 @@
         </header>
 
         <!-- hero/jumbtron-->
-        <section>
-            <div>
+        <section class="hero">
+            <div class="hero-form">
                 <h3>Get Started Today</h3> 
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
-            <!-- Add form element-->
             <form>
                 <label for="name">Enter Full name:</label>
-                <input type="text" placeholder="Your Name" name="name" id="name" />
+                <input type="text" placeholder="Your Name" name="name" id="name" class="form-input">
                 <label for="email">Enter email address:</label>
-                <input type="email" placeholder="Email Address" name="email" id="email" />
+                <input type="text" placeholder="Email Address" name="email" id="email" class="form-input">
                 <label for="phone">Enter a telephone number:</label>
-                <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
+                <input type="text" placeholder="Phone Number" name="phone" id="phone" class="form-input">
                 <p>
                     Have you worked out with a trainer before?
-                    <input type="radio" name="trainer-confirm" id="trainer-yes"/>
+                    <input type="radio" name="trainer-confirm" id="trainer-yes" />
                     <label for="trainer-yes">yes</label>
-                    <input type="radio" name="trainer-confirm" id="trainer-no"/>
+                    <input type="radio" name="trainer-confirm" id="trainer-no" />
                     <label for="trainer-no">No</label>
                 </p>
                 <p>
