--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </section>
 
         <!-- "what We Do" section-->
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
             <h2>What We Do</h2>
             <p>
                 butcher selfies chambray shabby chic gentrify readymade yr echo park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of the single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggins narwhal Marfa Schlitz sustainable   
