--- a/index.html
+++ b/index.html
@@ -152,6 +152,30 @@
         <!-- "reach out" section-->
         <section>
             <h2>Reach Out</h2>
+            <div class="contact-info">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3332.2972657744453!2d-111.76237388479584!3d33.36330446116696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872baed2a103e3f1%3A0xac8b31c420912880!2s736%20N%20Slate%20St%2C%20Gilbert%2C%20AZ%2085234!5e0!3m2!1sen!2sus!4v1643574663527!5m2!1sen!2sus"
+                width="400" 
+                height="400" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+                </iframe>
+            </div>
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    Any questions or concerns before signing up?
+                    <br />
+                    Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br/>
+                    Some Town, CA, <br/>
+                    12345 <br/>
+                    P: 555.RUN.BUDZ (555.786.2839)<br/>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
         </section>
 
         <!-- footer -->
