--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
         </section>
 
         <!-- "reach out" section-->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary border">Reach Out</h2>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3332.2972657744453!2d-111.76237388479584!3d33.36330446116696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872baed2a103e3f1%3A0xac8b31c420912880!2s736%20N%20Slate%20St%2C%20Gilbert%2C%20AZ%2085234!5e0!3m2!1sen!2sus!4v1643574663527!5m2!1sen!2sus"
                 width="400" 
