--- a/index.html
+++ b/index.html
@@ -76,10 +76,14 @@
 
         <!-- "what We Do" section-->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border"> What We Do</h2>
-            <p>
-                butcher selfies chambray shabby chic gentrify readymade yr echo park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of the single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggins narwhal Marfa Schlitz sustainable   
-            </p>
+            <div class="flex-row">
+                <h2 class="section-title primary-border"> What We Do</h2>
+            </div>
+            <div class="flex-row">
+                <p>
+                    butcher selfies chambray shabby chic gentrify readymade yr echo park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of the single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggins narwhal Marfa Schlitz sustainable   
+                </p>
+            </div>
         </section>
 
         <!-- "what you do" section-->
